[JENKINS-42597] Percent character (%) in filenames is not url-encoded in the CHANGES page